--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,18 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_bloc: ^7.3.1
+  easy_localization: ^3.0.0
+  flutter_secure_storage: ^4.2.1
+  equatable: ^2.0.0
+  # Add the dependency for the Firebase Core Flutter SDK
+  firebase_core: ^1.8.0
+  # Add the dependency for the FlutterFire plugin for Google Analytics
+  firebase_analytics: ^8.3.4
+  firebase_messaging: any
+  # Add the dependencies for any other Firebase products you want to use in your app
+  # For example, to use Firebase Authentication and Cloud Firestore
+  firebase_auth: ^3.1.4
+  cloud_firestore: ^2.5.4
 
 dev_dependencies:
   flutter_test:
@@ -38,7 +50,9 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
+  assets:
+    - assets/translations/
+    - assets/
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
