--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,8 @@ dependencies:
   flutter:
     sdk: flutter
 
-
+  circular_profile_avatar: ^2.0.5
+  url_launcher: ^6.0.9
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
